# youarefounder

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/[companyId]/: layout.tsx  page.tsx
apps/web/src/app/app/[companyId]/inbox/: page.tsx
apps/web/src/app/app/[companyId]/settings/: page.tsx
apps/web/src/app/app/[companyId]/team/: page.tsx
apps/web/src/app/app/[companyId]/workspaces/: page.tsx
apps/web/src/app/app/[companyId]/workspaces/[workspaceId]/: page.tsx
apps/web/src/app/app/[companyId]/workspaces/[workspaceId]/tickets/[ticketId]/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  coming-soon.tsx  input.tsx  spinner.tsx  textarea.tsx
apps/web/src/lib/: api.ts
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs
crates/ai-providers/: Cargo.toml
crates/ai-providers/src/: lib.rs  ollama.rs  registry.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  embedded_postgres.rs  error.rs  job_events.rs  main.rs  state.rs
crates/api/src/routes/: agent_jobs.rs  ai_profiles.rs  bootstrap.rs  companies.rs  decisions.rs  hiring.rs  mod.rs  people.rs  product_brain.rs  products.rs  providers.rs  simulation.rs  system.rs  tickets.rs  workspace_members.rs  workspaces.rs
crates/api/src/worker/: actions.rs  agent_runner.rs  context.rs  mod.rs  scheduler.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial.sql  002_ai_profiles.sql  003_workspaces_and_tickets.sql  004_workspace_members.sql  005_hiring_and_contracts.sql  006_org_chart.sql  007_run_state_and_agent_runs.sql  008_max_concurrent_agents.sql  009_decisions.sql  010_job_priority.sql  011_ticket_definition_of_done.sql  012_agent_memory.sql  013_product_brain_and_ticket_references.sql  014_hiring_workspace_ids.sql
crates/db/src/: agent_run.rs  ai_profile.rs  bootstrap.rs  company.rs  decision.rs  hiring.rs  job.rs  lib.rs  person.rs  product.rs  product_brain.rs  ticket.rs  workspace.rs  workspace_member.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent_run.rs  ai_profile.rs  company.rs  decision.rs  hiring.rs  job.rs  lib.rs  person.rs  product.rs  product_brain.rs  ticket.rs  workspace.rs  workspace_member.rs
implemented/: README.md  phase-0-foundations.md  phase-1-onboarding-ollama.md  phase-2-workspaces-and-tickets.md  phase-3-hiring-and-org-chart.md
plans/: 00-vision-and-scope.md  01-system-architecture.md  02-domain-model.md  03-backend-rust.md  04-frontend-next.md  05-ai-runtime.md  06-workspaces-and-tickets.md  07-hiring-and-approvals.md  08-notification-and-escalation.md  09-security-and-compliance.md  10-implementation-phases.md  11-embedded-runtime-data.md  12-ai-provider-extensibility.md  13-git-integration-and-knowledge-index.md  14-implementation-phases-design.md  README.md
