[workspace]
members = [
    "crates/domain",
    "crates/db",
    "crates/ai-core",
    "crates/ai-providers",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# In-process cache
moka = { version = "0.12", features = ["future"] }

# Embedded Postgres
pg-embed = { version = "1.0.0", default-features = false, features = [
    "rt_tokio_migrate",
] }

# HTTP client (for AI provider adapters)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

# Async trait support
async-trait = "0.1"

# Async streams
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Utilities
slug = "0.1"
directories = "5"
