[package]
name = "ai-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-core = { path = "../ai-core" }

async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
